updated function to fetch article authors as well

--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "14298db4-2590-4992-a49c-d6c93d962b44",
    "metadata": {},
    "outputs": [],
@@ -126,12 +126,63 @@
     "                'article_id' : res.entry_id,\n",
     "                'url' : res.pdf_url,\n",
     "                'main_topic' : res.primary_category,\n",
-    "                'all_topics' : res.categories\n",
+    "                'all_topics' : res.categories,\n",
+    "                'authors' : res.authors\n",
     "            }\n",
     "            d.append(data)\n",
     "        \n",
     "    d = pd.DataFrame(d)\n",
+    "    d['year'] = pd.DatetimeIndex(d['date']).year\n",
+    "    \n",
+    "    # change article id from url to integer\n",
+    "    unique_article_ids = d.article_id.unique()\n",
+    "    article_mapping = {art:idx for idx,art in enumerate(unique_article_ids)}\n",
+    "    d['article_id'] = d['article_id'].map(article_mapping)\n",
     "    return d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "2228379a-8a64-49df-9669-216e216c4570",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 321 ms, sys: 27.8 ms, total: 349 ms\n",
+      "Wall time: 3.58 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(5332, 7)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "research_df2 = search_arxiv(\n",
+    "    queries = queries,\n",
+    "    max_results = 10\n",
+    ")\n",
+    "research_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03d844ed-48ab-430f-af71-3120713e0ebd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "research_df2"
    ]
   },
   {
@@ -170,8 +221,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "ffd99890-db2e-409e-9239-010ea99ccbe0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d17a69c9-a239-4a65-88ef-a4c2abd7999b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "30ebaace-a806-4ad6-a1b0-7b3abe3d72ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1998"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "research_df.year.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "85451c24-d954-406c-baee-7c42c1c675af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2022"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "research_df.year.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2d1a5120-28ca-4fb3-b83f-44c2435eb994",
    "metadata": {},
    "outputs": [
     {
@@ -201,6 +310,7 @@
        "      <th>url</th>\n",
        "      <th>main_topic</th>\n",
        "      <th>all_topics</th>\n",
+       "      <th>year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -208,169 +318,86 @@
        "      <th>0</th>\n",
        "      <td>Review of automated time series forecasting pi...</td>\n",
        "      <td>2022-02-03 17:26:27+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2202.01712v1</td>\n",
+       "      <td>0</td>\n",
        "      <td>http://arxiv.org/pdf/2202.01712v1</td>\n",
        "      <td>cs.LG</td>\n",
        "      <td>[cs.LG]</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Hubble Asteroid Hunter: I. Identifying asteroi...</td>\n",
        "      <td>2022-02-01 06:56:20+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2202.00246v1</td>\n",
+       "      <td>1</td>\n",
        "      <td>http://arxiv.org/pdf/2202.00246v1</td>\n",
        "      <td>astro-ph.EP</td>\n",
        "      <td>[astro-ph.EP, astro-ph.IM]</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...</td>\n",
        "      <td>2022-01-31 18:02:09+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2201.13396v1</td>\n",
+       "      <td>2</td>\n",
        "      <td>http://arxiv.org/pdf/2201.13396v1</td>\n",
        "      <td>cs.LG</td>\n",
        "      <td>[cs.LG, cs.AI, stat.ML]</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Online AutoML: An adaptive AutoML framework fo...</td>\n",
        "      <td>2022-01-24 15:37:20+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2201.09750v1</td>\n",
+       "      <td>3</td>\n",
        "      <td>http://arxiv.org/pdf/2201.09750v1</td>\n",
        "      <td>cs.LG</td>\n",
        "      <td>[cs.LG, cs.AI]</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Automated Reinforcement Learning (AutoRL): A S...</td>\n",
        "      <td>2022-01-11 12:41:43+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2201.03916v1</td>\n",
+       "      <td>4</td>\n",
        "      <td>http://arxiv.org/pdf/2201.03916v1</td>\n",
        "      <td>cs.LG</td>\n",
        "      <td>[cs.LG]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5327</th>\n",
-       "      <td>Reinforcement Learning-Based Deadline and Batt...</td>\n",
-       "      <td>2022-01-25 14:42:29+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2201.10361v2</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.10361v2</td>\n",
-       "      <td>cs.NI</td>\n",
-       "      <td>[cs.NI]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5328</th>\n",
-       "      <td>Resource-efficient Deep Neural Networks for Au...</td>\n",
-       "      <td>2022-01-25 14:41:08+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2201.10360v1</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.10360v1</td>\n",
-       "      <td>eess.SP</td>\n",
-       "      <td>[eess.SP, cs.CV]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5329</th>\n",
-       "      <td>Ultra Low-Parameter Denoising: Trainable Bilat...</td>\n",
-       "      <td>2022-01-25 14:33:56+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2201.10345v1</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.10345v1</td>\n",
-       "      <td>eess.IV</td>\n",
-       "      <td>[eess.IV, cs.CV]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5330</th>\n",
-       "      <td>Distributed Image Transmission using Deep Join...</td>\n",
-       "      <td>2022-01-25 14:25:26+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2201.10340v1</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.10340v1</td>\n",
-       "      <td>cs.IT</td>\n",
-       "      <td>[cs.IT, cs.LG, math.IT]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5331</th>\n",
-       "      <td>ML4CO-KIDA: Knowledge Inheritance in Dataset A...</td>\n",
-       "      <td>2022-01-25 14:03:57+00:00</td>\n",
-       "      <td>http://arxiv.org/abs/2201.10328v3</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.10328v3</td>\n",
-       "      <td>cs.AI</td>\n",
-       "      <td>[cs.AI, cs.LG]</td>\n",
+       "      <td>2022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5332 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                  title  \\\n",
-       "0     Review of automated time series forecasting pi...   \n",
-       "1     Hubble Asteroid Hunter: I. Identifying asteroi...   \n",
-       "2     NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...   \n",
-       "3     Online AutoML: An adaptive AutoML framework fo...   \n",
-       "4     Automated Reinforcement Learning (AutoRL): A S...   \n",
-       "...                                                 ...   \n",
-       "5327  Reinforcement Learning-Based Deadline and Batt...   \n",
-       "5328  Resource-efficient Deep Neural Networks for Au...   \n",
-       "5329  Ultra Low-Parameter Denoising: Trainable Bilat...   \n",
-       "5330  Distributed Image Transmission using Deep Join...   \n",
-       "5331  ML4CO-KIDA: Knowledge Inheritance in Dataset A...   \n",
+       "                                               title  \\\n",
+       "0  Review of automated time series forecasting pi...   \n",
+       "1  Hubble Asteroid Hunter: I. Identifying asteroi...   \n",
+       "2  NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...   \n",
+       "3  Online AutoML: An adaptive AutoML framework fo...   \n",
+       "4  Automated Reinforcement Learning (AutoRL): A S...   \n",
        "\n",
-       "                          date                         article_id  \\\n",
-       "0    2022-02-03 17:26:27+00:00  http://arxiv.org/abs/2202.01712v1   \n",
-       "1    2022-02-01 06:56:20+00:00  http://arxiv.org/abs/2202.00246v1   \n",
-       "2    2022-01-31 18:02:09+00:00  http://arxiv.org/abs/2201.13396v1   \n",
-       "3    2022-01-24 15:37:20+00:00  http://arxiv.org/abs/2201.09750v1   \n",
-       "4    2022-01-11 12:41:43+00:00  http://arxiv.org/abs/2201.03916v1   \n",
-       "...                        ...                                ...   \n",
-       "5327 2022-01-25 14:42:29+00:00  http://arxiv.org/abs/2201.10361v2   \n",
-       "5328 2022-01-25 14:41:08+00:00  http://arxiv.org/abs/2201.10360v1   \n",
-       "5329 2022-01-25 14:33:56+00:00  http://arxiv.org/abs/2201.10345v1   \n",
-       "5330 2022-01-25 14:25:26+00:00  http://arxiv.org/abs/2201.10340v1   \n",
-       "5331 2022-01-25 14:03:57+00:00  http://arxiv.org/abs/2201.10328v3   \n",
+       "                       date  article_id                                url  \\\n",
+       "0 2022-02-03 17:26:27+00:00           0  http://arxiv.org/pdf/2202.01712v1   \n",
+       "1 2022-02-01 06:56:20+00:00           1  http://arxiv.org/pdf/2202.00246v1   \n",
+       "2 2022-01-31 18:02:09+00:00           2  http://arxiv.org/pdf/2201.13396v1   \n",
+       "3 2022-01-24 15:37:20+00:00           3  http://arxiv.org/pdf/2201.09750v1   \n",
+       "4 2022-01-11 12:41:43+00:00           4  http://arxiv.org/pdf/2201.03916v1   \n",
        "\n",
-       "                                    url   main_topic  \\\n",
-       "0     http://arxiv.org/pdf/2202.01712v1        cs.LG   \n",
-       "1     http://arxiv.org/pdf/2202.00246v1  astro-ph.EP   \n",
-       "2     http://arxiv.org/pdf/2201.13396v1        cs.LG   \n",
-       "3     http://arxiv.org/pdf/2201.09750v1        cs.LG   \n",
-       "4     http://arxiv.org/pdf/2201.03916v1        cs.LG   \n",
-       "...                                 ...          ...   \n",
-       "5327  http://arxiv.org/pdf/2201.10361v2        cs.NI   \n",
-       "5328  http://arxiv.org/pdf/2201.10360v1      eess.SP   \n",
-       "5329  http://arxiv.org/pdf/2201.10345v1      eess.IV   \n",
-       "5330  http://arxiv.org/pdf/2201.10340v1        cs.IT   \n",
-       "5331  http://arxiv.org/pdf/2201.10328v3        cs.AI   \n",
-       "\n",
-       "                      all_topics  \n",
-       "0                        [cs.LG]  \n",
-       "1     [astro-ph.EP, astro-ph.IM]  \n",
-       "2        [cs.LG, cs.AI, stat.ML]  \n",
-       "3                 [cs.LG, cs.AI]  \n",
-       "4                        [cs.LG]  \n",
-       "...                          ...  \n",
-       "5327                     [cs.NI]  \n",
-       "5328            [eess.SP, cs.CV]  \n",
-       "5329            [eess.IV, cs.CV]  \n",
-       "5330     [cs.IT, cs.LG, math.IT]  \n",
-       "5331              [cs.AI, cs.LG]  \n",
-       "\n",
-       "[5332 rows x 6 columns]"
+       "    main_topic                  all_topics  year  \n",
+       "0        cs.LG                     [cs.LG]  2022  \n",
+       "1  astro-ph.EP  [astro-ph.EP, astro-ph.IM]  2022  \n",
+       "2        cs.LG     [cs.LG, cs.AI, stat.ML]  2022  \n",
+       "3        cs.LG              [cs.LG, cs.AI]  2022  \n",
+       "4        cs.LG                     [cs.LG]  2022  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "research_df"
+    "research_df.head()"
    ]
   },
   {
@@ -380,6 +407,14 @@
    "source": [
     "## Generate Network"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec9d6b08-ef13-4ac1-bc69-61529d33679e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
