updated data with author names

--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -10,38 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "6c26a7c0-135c-40c7-84af-16260c96793a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting arxiv\n",
-      "  Downloading arxiv-1.4.2-py3-none-any.whl (11 kB)\n",
-      "Collecting feedparser\n",
-      "  Downloading feedparser-6.0.8-py3-none-any.whl (81 kB)\n",
-      "\u001b[K     |████████████████████████████████| 81 kB 1.7 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting sgmllib3k\n",
-      "  Downloading sgmllib3k-1.0.0.tar.gz (5.8 kB)\n",
-      "Building wheels for collected packages: sgmllib3k\n",
-      "  Building wheel for sgmllib3k (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for sgmllib3k: filename=sgmllib3k-1.0.0-py3-none-any.whl size=6065 sha256=9628adb2c5f911b2608828809f9555a106d3a0b745a02b4cf5c0b995c871b39d\n",
-      "  Stored in directory: /Users/vatsalpatel/Library/Caches/pip/wheels/83/63/2f/117884c3b19d46b64d3d61690333aa80c88dc14050e269c546\n",
-      "Successfully built sgmllib3k\n",
-      "Installing collected packages: sgmllib3k, feedparser, arxiv\n",
-      "Successfully installed arxiv-1.4.2 feedparser-6.0.8 sgmllib3k-1.0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install arxiv"
+    "# !pip install arxiv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fe6b94e0-f903-422f-baab-76010e772026",
    "metadata": {},
    "outputs": [],
@@ -57,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5116e841-87c8-4e79-9c1f-6b740c7a9ef9",
    "metadata": {},
    "outputs": [],
@@ -78,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "14298db4-2590-4992-a49c-d6c93d962b44",
    "metadata": {},
    "outputs": [],
@@ -143,51 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "2228379a-8a64-49df-9669-216e216c4570",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 321 ms, sys: 27.8 ms, total: 349 ms\n",
-      "Wall time: 3.58 s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(5332, 7)"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "research_df2 = search_arxiv(\n",
-    "    queries = queries,\n",
-    "    max_results = 10\n",
-    ")\n",
-    "research_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03d844ed-48ab-430f-af71-3120713e0ebd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "research_df2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "96f77985-1287-4641-bd45-9dbd873c0da4",
    "metadata": {},
    "outputs": [
@@ -195,17 +130,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.99 s, sys: 421 ms, total: 8.41 s\n",
-      "Wall time: 4min 1s\n"
+      "CPU times: user 8.02 s, sys: 456 ms, total: 8.48 s\n",
+      "Wall time: 3min 39s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(5332, 6)"
+       "(5332, 8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,187 +152,6 @@
     "    max_results = 1000\n",
     ")\n",
     "research_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "ffd99890-db2e-409e-9239-010ea99ccbe0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "d17a69c9-a239-4a65-88ef-a4c2abd7999b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "30ebaace-a806-4ad6-a1b0-7b3abe3d72ea",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1998"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "research_df.year.min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "85451c24-d954-406c-baee-7c42c1c675af",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2022"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "research_df.year.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "2d1a5120-28ca-4fb3-b83f-44c2435eb994",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>date</th>\n",
-       "      <th>article_id</th>\n",
-       "      <th>url</th>\n",
-       "      <th>main_topic</th>\n",
-       "      <th>all_topics</th>\n",
-       "      <th>year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Review of automated time series forecasting pi...</td>\n",
-       "      <td>2022-02-03 17:26:27+00:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>http://arxiv.org/pdf/2202.01712v1</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>[cs.LG]</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Hubble Asteroid Hunter: I. Identifying asteroi...</td>\n",
-       "      <td>2022-02-01 06:56:20+00:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>http://arxiv.org/pdf/2202.00246v1</td>\n",
-       "      <td>astro-ph.EP</td>\n",
-       "      <td>[astro-ph.EP, astro-ph.IM]</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...</td>\n",
-       "      <td>2022-01-31 18:02:09+00:00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.13396v1</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>[cs.LG, cs.AI, stat.ML]</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Online AutoML: An adaptive AutoML framework fo...</td>\n",
-       "      <td>2022-01-24 15:37:20+00:00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.09750v1</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>[cs.LG, cs.AI]</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Automated Reinforcement Learning (AutoRL): A S...</td>\n",
-       "      <td>2022-01-11 12:41:43+00:00</td>\n",
-       "      <td>4</td>\n",
-       "      <td>http://arxiv.org/pdf/2201.03916v1</td>\n",
-       "      <td>cs.LG</td>\n",
-       "      <td>[cs.LG]</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               title  \\\n",
-       "0  Review of automated time series forecasting pi...   \n",
-       "1  Hubble Asteroid Hunter: I. Identifying asteroi...   \n",
-       "2  NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...   \n",
-       "3  Online AutoML: An adaptive AutoML framework fo...   \n",
-       "4  Automated Reinforcement Learning (AutoRL): A S...   \n",
-       "\n",
-       "                       date  article_id                                url  \\\n",
-       "0 2022-02-03 17:26:27+00:00           0  http://arxiv.org/pdf/2202.01712v1   \n",
-       "1 2022-02-01 06:56:20+00:00           1  http://arxiv.org/pdf/2202.00246v1   \n",
-       "2 2022-01-31 18:02:09+00:00           2  http://arxiv.org/pdf/2201.13396v1   \n",
-       "3 2022-01-24 15:37:20+00:00           3  http://arxiv.org/pdf/2201.09750v1   \n",
-       "4 2022-01-11 12:41:43+00:00           4  http://arxiv.org/pdf/2201.03916v1   \n",
-       "\n",
-       "    main_topic                  all_topics  year  \n",
-       "0        cs.LG                     [cs.LG]  2022  \n",
-       "1  astro-ph.EP  [astro-ph.EP, astro-ph.IM]  2022  \n",
-       "2        cs.LG     [cs.LG, cs.AI, stat.ML]  2022  \n",
-       "3        cs.LG              [cs.LG, cs.AI]  2022  \n",
-       "4        cs.LG                     [cs.LG]  2022  "
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "research_df.head()"
    ]
   },
   {
