added documentation associated to initial processes

--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -19,6 +19,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77beb5bb-e6db-4d92-88fb-2ee138c24836",
+   "metadata": {},
+   "source": [
+    "You can install the arxiv package in Python with the following command:  \n",
+    "`pip install arxiv`  \n",
+    "or follow the instructions here : https://pypi.org/project/arxiv/  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "fe6b94e0-f903-422f-baab-76010e772026",
@@ -53,6 +63,18 @@
    "metadata": {},
    "source": [
     "# Fetch Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb4e4258-9565-41b0-a01a-4ef1cf783c01",
+   "metadata": {},
+   "source": [
+    "We want to hit th Arxiv API to gather some information about the latest research papers based on the queries we've identified above. This will allow us to then create a network from this research paper data and then we can try to predict links on that network. For the purposes of this article, I will search for a maximum of 1000 results per query, but you don't have to set yourself to the same constraints. The Arxiv API allows users to hit up to 300,000 results per query. The function outlined below will generate a CSV fetching the following information :   \n",
+    "```'title', 'date', 'article_id', 'url', 'main_topic', 'all_topics', 'authors', 'year'```   \n",
+    "You are able to fetch more information like the `links, summary, article` but I decided not to since those features won't really be used for the purposes of this analysis and tutorial.\n",
+    "\n",
+    "For reference to the Arxiv API, you can find their detailed documentation here : https://arxiv.org/help/api/user-manual"
    ]
   },
   {
@@ -163,12 +185,241 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "437b2d6f-60f9-4568-afc2-50cb32154cff",
+   "metadata": {},
+   "source": [
+    "Now that we've fetched the data using the Arxiv API, we can generate a network. The network will have the following structure, nodes will be the article_ids and the edges will be all topics connecting a pair of articles. For example, article_id 1 with the following topics `astro-physics, and stats` can be connected to article_id 10 with the topic `stats` and article_id 7 with the topics `astro-physics, math`. This will be a multi-edge network where each edge will hold a weight of 1."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ec9d6b08-ef13-4ac1-bc69-61529d33679e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>date</th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>url</th>\n",
+       "      <th>main_topic</th>\n",
+       "      <th>all_topics</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Review of automated time series forecasting pi...</td>\n",
+       "      <td>2022-02-03 17:26:27+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.01712v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG]</td>\n",
+       "      <td>[Stefan Meisenbacher, Marian Turowski, Kaleb P...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hubble Asteroid Hunter: I. Identifying asteroi...</td>\n",
+       "      <td>2022-02-01 06:56:20+00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>http://arxiv.org/pdf/2202.00246v1</td>\n",
+       "      <td>astro-ph.EP</td>\n",
+       "      <td>[astro-ph.EP, astro-ph.IM]</td>\n",
+       "      <td>[Sandor Kruk, Pablo García Martín, Marcel Pope...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...</td>\n",
+       "      <td>2022-01-31 18:02:09+00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.13396v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG, cs.AI, stat.ML]</td>\n",
+       "      <td>[Yash Mehta, Colin White, Arber Zela, Arjun Kr...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Online AutoML: An adaptive AutoML framework fo...</td>\n",
+       "      <td>2022-01-24 15:37:20+00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.09750v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG, cs.AI]</td>\n",
+       "      <td>[Bilge Celik, Prabhant Singh, Joaquin Vanschoren]</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Automated Reinforcement Learning (AutoRL): A S...</td>\n",
+       "      <td>2022-01-11 12:41:43+00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.03916v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG]</td>\n",
+       "      <td>[Jack Parker-Holder, Raghu Rajan, Xingyou Song...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5327</th>\n",
+       "      <td>Reinforcement Learning-Based Deadline and Batt...</td>\n",
+       "      <td>2022-01-25 14:42:29+00:00</td>\n",
+       "      <td>4509</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10361v2</td>\n",
+       "      <td>cs.NI</td>\n",
+       "      <td>[cs.NI]</td>\n",
+       "      <td>[Anne Catherine Nguyen, Turgay Pamuklu, Aisha ...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5328</th>\n",
+       "      <td>Resource-efficient Deep Neural Networks for Au...</td>\n",
+       "      <td>2022-01-25 14:41:08+00:00</td>\n",
+       "      <td>4510</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10360v1</td>\n",
+       "      <td>eess.SP</td>\n",
+       "      <td>[eess.SP, cs.CV]</td>\n",
+       "      <td>[Johanna Rock, Wolfgang Roth, Mate Toth, Paul ...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5329</th>\n",
+       "      <td>Ultra Low-Parameter Denoising: Trainable Bilat...</td>\n",
+       "      <td>2022-01-25 14:33:56+00:00</td>\n",
+       "      <td>4511</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10345v1</td>\n",
+       "      <td>eess.IV</td>\n",
+       "      <td>[eess.IV, cs.CV]</td>\n",
+       "      <td>[Fabian Wagner, Mareike Thies, Mingxuan Gu, Yi...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5330</th>\n",
+       "      <td>Distributed Image Transmission using Deep Join...</td>\n",
+       "      <td>2022-01-25 14:25:26+00:00</td>\n",
+       "      <td>4512</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10340v1</td>\n",
+       "      <td>cs.IT</td>\n",
+       "      <td>[cs.IT, cs.LG, math.IT]</td>\n",
+       "      <td>[Sixian Wang, Ke Yang, Jincheng Dai, Kai Niu]</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5331</th>\n",
+       "      <td>ML4CO-KIDA: Knowledge Inheritance in Dataset A...</td>\n",
+       "      <td>2022-01-25 14:03:57+00:00</td>\n",
+       "      <td>4513</td>\n",
+       "      <td>http://arxiv.org/pdf/2201.10328v3</td>\n",
+       "      <td>cs.AI</td>\n",
+       "      <td>[cs.AI, cs.LG]</td>\n",
+       "      <td>[Zixuan Cao, Yang Xu, Zhewei Huang, Shuchang Z...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5332 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  title  \\\n",
+       "0     Review of automated time series forecasting pi...   \n",
+       "1     Hubble Asteroid Hunter: I. Identifying asteroi...   \n",
+       "2     NAS-Bench-Suite: NAS Evaluation is (Now) Surpr...   \n",
+       "3     Online AutoML: An adaptive AutoML framework fo...   \n",
+       "4     Automated Reinforcement Learning (AutoRL): A S...   \n",
+       "...                                                 ...   \n",
+       "5327  Reinforcement Learning-Based Deadline and Batt...   \n",
+       "5328  Resource-efficient Deep Neural Networks for Au...   \n",
+       "5329  Ultra Low-Parameter Denoising: Trainable Bilat...   \n",
+       "5330  Distributed Image Transmission using Deep Join...   \n",
+       "5331  ML4CO-KIDA: Knowledge Inheritance in Dataset A...   \n",
+       "\n",
+       "                          date  article_id                                url  \\\n",
+       "0    2022-02-03 17:26:27+00:00           0  http://arxiv.org/pdf/2202.01712v1   \n",
+       "1    2022-02-01 06:56:20+00:00           1  http://arxiv.org/pdf/2202.00246v1   \n",
+       "2    2022-01-31 18:02:09+00:00           2  http://arxiv.org/pdf/2201.13396v1   \n",
+       "3    2022-01-24 15:37:20+00:00           3  http://arxiv.org/pdf/2201.09750v1   \n",
+       "4    2022-01-11 12:41:43+00:00           4  http://arxiv.org/pdf/2201.03916v1   \n",
+       "...                        ...         ...                                ...   \n",
+       "5327 2022-01-25 14:42:29+00:00        4509  http://arxiv.org/pdf/2201.10361v2   \n",
+       "5328 2022-01-25 14:41:08+00:00        4510  http://arxiv.org/pdf/2201.10360v1   \n",
+       "5329 2022-01-25 14:33:56+00:00        4511  http://arxiv.org/pdf/2201.10345v1   \n",
+       "5330 2022-01-25 14:25:26+00:00        4512  http://arxiv.org/pdf/2201.10340v1   \n",
+       "5331 2022-01-25 14:03:57+00:00        4513  http://arxiv.org/pdf/2201.10328v3   \n",
+       "\n",
+       "       main_topic                  all_topics  \\\n",
+       "0           cs.LG                     [cs.LG]   \n",
+       "1     astro-ph.EP  [astro-ph.EP, astro-ph.IM]   \n",
+       "2           cs.LG     [cs.LG, cs.AI, stat.ML]   \n",
+       "3           cs.LG              [cs.LG, cs.AI]   \n",
+       "4           cs.LG                     [cs.LG]   \n",
+       "...           ...                         ...   \n",
+       "5327        cs.NI                     [cs.NI]   \n",
+       "5328      eess.SP            [eess.SP, cs.CV]   \n",
+       "5329      eess.IV            [eess.IV, cs.CV]   \n",
+       "5330        cs.IT     [cs.IT, cs.LG, math.IT]   \n",
+       "5331        cs.AI              [cs.AI, cs.LG]   \n",
+       "\n",
+       "                                                authors  year  \n",
+       "0     [Stefan Meisenbacher, Marian Turowski, Kaleb P...  2022  \n",
+       "1     [Sandor Kruk, Pablo García Martín, Marcel Pope...  2022  \n",
+       "2     [Yash Mehta, Colin White, Arber Zela, Arjun Kr...  2022  \n",
+       "3     [Bilge Celik, Prabhant Singh, Joaquin Vanschoren]  2022  \n",
+       "4     [Jack Parker-Holder, Raghu Rajan, Xingyou Song...  2022  \n",
+       "...                                                 ...   ...  \n",
+       "5327  [Anne Catherine Nguyen, Turgay Pamuklu, Aisha ...  2022  \n",
+       "5328  [Johanna Rock, Wolfgang Roth, Mate Toth, Paul ...  2022  \n",
+       "5329  [Fabian Wagner, Mareike Thies, Mingxuan Gu, Yi...  2022  \n",
+       "5330      [Sixian Wang, Ke Yang, Jincheng Dai, Kai Niu]  2022  \n",
+       "5331  [Zixuan Cao, Yang Xu, Zhewei Huang, Shuchang Z...  2022  \n",
+       "\n",
+       "[5332 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "research_df"
+   ]
   },
   {
    "cell_type": "code",
